Bug 1343691 - fix missing rtcp stats;r=jib a=gchang

Omitting the RTT when it is not available breaks a lot of tests (as jesup warned).
I am going to fix the RTT behavior and the tests in bug 1344970, for now RTT will
be zero when unavailable.

MozReview-Commit-ID: 9x3eQfbM3ZT